fix issues with modal/overlay styling on mobile

--- a/src/components/PlayerInfo/PlayerInfo.css
+++ b/src/components/PlayerInfo/PlayerInfo.css
@@ -23,6 +23,7 @@
 
 .showModal {
 	max-height: 100vh;
+	min-height: 100vh;
 	position: fixed;
 	top: 0;
 	transition: all 0.6s ease-out;
